--- a/plugin.xml
+++ b/plugin.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="org.apache.cordova.plugin.googlenavigate"
     version="0.1.0">
-    <name>PhoneNavigator</name>
-    <description>Cordova PhoneNavigator Plugin</description>
+    <name>GoogleNavigate</name>
+    <description>Cordova GoogleNavigate Plugin</description>
     <license>MIT</license>
     <keywords>cordova,googlenavigate,android</keywords>
 
