--- a/plugin.xml
+++ b/plugin.xml
@@ -20,7 +20,7 @@
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="GoogleNavigate">
-                <param name="android-package" value="dk.iface.cordova.plugin.GoogleNavigate" />
+                <param name="android-package" value="dk.iface.cordova.plugin.googlenavigate.GoogleNavigate" />
             </feature>
         </config-file>
 
